Use context.auth_data for client Authorization

--- a/modules/swagger-codegen/src/main/resources/rust2/client.mustache
+++ b/modules/swagger-codegen/src/main/resources/rust2/client.mustache
@@ -7,7 +7,7 @@ extern crate chrono;
 use hyper;
 use hyper::client::IntoUrl;
 use hyper::mime;
-use hyper::header::{Headers, ContentType};
+use hyper::header::{Authorization, Headers, ContentType};
 use hyper::mime::{Mime, TopLevel, SubLevel, Attr, Value};
 use hyper::Url;
 use self::hyper_openssl::openssl;
@@ -31,8 +31,8 @@ use serde_json;
 use std::collections::{HashMap, BTreeMap};
 #[allow(unused_imports)]
 use swagger;
-
 use swagger::{Context, ApiError, XSpanId};
+use swagger::auth::AuthData;
 
 use {Api{{#apiInfo}}{{#apis}}{{#operations}}{{#operation}},
      {{operationId}}Response{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
@@ -79,6 +79,22 @@ impl Client {
             base_path: into_base_path(base_path, Some("http"))?,
             hyper_client: Arc::new(hyper::client::Client::new),
         })
+    }
+
+    pub fn try_new_https_simple<T>(base_path: T)
+                            -> Result<Client, ClientInitError>
+        where T: IntoUrl
+    {
+        // SSL implementation
+        let mut ssl = openssl::ssl::SslConnectorBuilder::new(openssl::ssl::SslMethod::tls())?;
+        let ssl = hyper_openssl::OpensslClient::from(ssl.build());
+        let connector = hyper::net::HttpsConnector::new(ssl);
+        let hyper_client = hyper::client::Client::with_connector(connector);
+
+        Ok(Client {
+                base_path: into_base_path(base_path, Some("https"))?,
+                hyper_client: Arc::new(hyper_client)
+            })
     }
 
     pub fn try_new_https<T, CA>(base_path: T,
@@ -228,6 +244,13 @@ impl Api for Client {
 
         custom_headers.set(ContentType(mimetypes::requests::{{#vendorExtensions}}{{uppercase_operation_id}}{{/vendorExtensions}}.clone()));
 {{/bodyParam}}
+        if let Some(ref auth) = context.auth_data {
+            match auth.clone() {
+                AuthData::Basic(h) => custom_headers.set(Authorization(h)),
+                AuthData::Bearer(h) => custom_headers.set(Authorization(h)),
+                AuthData::ApiKey(h) => custom_headers.set(Authorization(h)),
+            }
+        };
         context.x_span_id.as_ref().map(|header| custom_headers.set(XSpanId(header.clone())));
 {{#headerParams}}{{#-first}}
         // Header parameters
