Move Context from client argument lists to Client
I made a small change to `server` to get the resulting code to compile.
I have no doubt that the server code is incorrect. I do not understand
the server code well enough to know what direction to take it.

--- a/modules/swagger-codegen/src/main/resources/rust2/server.mustache
+++ b/modules/swagger-codegen/src/main/resources/rust2/server.mustache
@@ -204,7 +204,7 @@ fn add_routes<T>(router: &mut Router, api: T) where T: Api + Send + Sync + Clone
     {{/isFormParam}}
 {{/allParams}}
 
-                match api.{{#vendorExtensions}}{{operation_id}}{{/vendorExtensions}}({{#allParams}}param_{{paramName}}{{#isListContainer}}.as_ref(){{/isListContainer}}, {{/allParams}}context).wait() {
+                match api.{{#vendorExtensions}}{{operation_id}}{{/vendorExtensions}}({{#allParams}}param_{{paramName}}{{#isListContainer}}.as_ref(){{/isListContainer}}, {{/allParams}}).wait() {
                     Ok(rsp) => match rsp {
 {{#responses}}
                         {{operationId}}Response::{{message}}{{#dataType}}{{^headers}}(body){{/headers}}{{#headers}}{{#-first}}{ body{{/-first}}{{/headers}}{{/dataType}}{{#headers}}{{#-first}}{{^dataType}}{ {{/dataType}}{{#dataType}}, {{/dataType}}{{/-first}}{{^-first}}, {{/-first}}{{name}}{{#-last}} }{{/-last}}{{/headers}} => {
