--- a/modules/swagger-codegen/src/main/resources/rust2/client.mustache
+++ b/modules/swagger-codegen/src/main/resources/rust2/client.mustache
@@ -57,6 +57,7 @@ fn into_base_path<T: IntoUrl>(input: T, correct_scheme: Option<&'static str>) ->
 pub struct Client {
     base_path: String,
     hyper_client: Arc<hyper::client::Client>,
+    context: Context,
 }
 
 impl Client {
@@ -66,6 +67,7 @@ impl Client {
         Ok(Client {
             base_path: into_base_path(base_path, Some("http"))?,
             hyper_client: Arc::new(hyper::client::Client::new()),
+            context: Context::default(),
         })
     }
 
@@ -81,7 +83,8 @@ impl Client {
 
         Ok(Client {
                 base_path: into_base_path(base_path, Some("https"))?,
-                hyper_client: Arc::new(hyper_client)
+                hyper_client: Arc::new(hyper_client),
+                context: Context::default(),
             })
     }
 
@@ -103,7 +106,8 @@ impl Client {
 
         Ok(Client {
                 base_path: into_base_path(base_path, Some("https"))?,
-                hyper_client: Arc::new(hyper_client)
+                hyper_client: Arc::new(hyper_client),
+                context: Context::default(),
             })
     }
 
@@ -134,7 +138,8 @@ impl Client {
 
         Ok(Client {
                 base_path: into_base_path(base_path, Some("https"))?,
-                hyper_client: Arc::new(hyper_client)
+                hyper_client: Arc::new(hyper_client),
+                context: Context::default(),
             })
     }
 
@@ -155,14 +160,23 @@ impl Client {
     {
         Ok(Client {
             base_path: into_base_path(base_path, None)?,
-            hyper_client: Arc::new(hyper_client)
+            hyper_client: Arc::new(hyper_client),
+            context: Context::default(),
         })
     }
 }
 
 impl Api for Client {
+    fn with_context(&self, context: Context) -> Client {
+        Client {
+            base_path: self.base_path.clone(),
+            hyper_client: self.hyper_client.clone(),
+            context: context,
+        }
+    }
+
 {{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}
-    fn {{#vendorExtensions}}{{operation_id}}{{/vendorExtensions}}(&self{{#allParams}}, param_{{paramName}}: {{^required}}{{#isFile}}Box<Future<Item={{/isFile}}Option<{{/required}}{{#isListContainer}}&{{/isListContainer}}{{{dataType}}}{{^required}}>{{#isFile}}, Error=Error> + Send>{{/isFile}}{{/required}}{{/allParams}}, context: &Context) -> Box<Future<Item={{operationId}}Response, Error=ApiError> + Send> {
+    fn {{#vendorExtensions}}{{operation_id}}{{/vendorExtensions}}(&self{{#allParams}}, param_{{paramName}}: {{^required}}{{#isFile}}Box<Future<Item={{/isFile}}Option<{{/required}}{{#isListContainer}}&{{/isListContainer}}{{{dataType}}}{{^required}}>{{#isFile}}, Error=Error> + Send>{{/isFile}}{{/required}}{{/allParams}}) -> Box<Future<Item={{operationId}}Response, Error=ApiError> + Send> {
 {{#queryParams}}{{#-first}}
         // Query parameters
 {{/-first}}{{#required}}        let query_{{paramName}} = format!("{{baseName}}={{=<% %>=}}{<% paramName %>}<%={{ }}=%>&", {{paramName}}=param_{{paramName}}{{#isListContainer}}.join(","){{/isListContainer}}{{^isListContainer}}.to_string(){{/isListContainer}});
@@ -212,14 +226,14 @@ impl Api for Client {
 
         custom_headers.set(hyper::header::ContentType::json());
 {{/bodyParam}}
-        if let Some(ref auth) = context.auth_data {
+        if let Some(ref auth) = self.context.auth_data {
             match auth.clone() {
                 AuthData::Basic(h) => custom_headers.set(Authorization(h)),
                 AuthData::Bearer(h) => custom_headers.set(Authorization(h)),
                 AuthData::ApiKey(h) => custom_headers.set(Authorization(h)),
             }
         };
-        context.x_span_id.as_ref().map(|header| custom_headers.set(XSpanId(header.clone())));
+        self.context.x_span_id.as_ref().map(|header| custom_headers.set(XSpanId(header.clone())));
 {{#headerParams}}{{#-first}}
         // Header parameters
 
